Fix overlapped slider TFS 264148

--- a/src/app/charts/category-chart/high-frequency/category-chart-high-frequency-sample.component.scss
+++ b/src/app/charts/category-chart/high-frequency/category-chart-high-frequency-sample.component.scss
@@ -29,8 +29,7 @@
 }
 
 .slider {
-    width: 165px;
-    margin-top: -15px;
+    width: 165px;    
 }
 
 igx-category-chart {
